# crewsoul

./: .gitignore  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
backend/: config.py  main.py  models.py  sanitizer.py
backend/agents/: base.py  converser.py  fetcher.py  judge.py  researcher.py  target.py
backend/output/: writer.py
backend/providers/: base.py  openai_provider.py  openrouter_provider.py
backend/routes/: chat_routes.py  config_routes.py  events_routes.py  job_routes.py
backend/runner/: events.py  orchestrator.py  preparation.py  queue.py
backend/scoring/: leak_detector.py  pipeline.py  style_metrics.py
backend/search/: brave.py  perplexity.py
docs/superpowers/plans/: 2026-03-18-crewsoul-implementation.md
docs/superpowers/specs/: 2026-03-18-crewsoul-design.md
examples/am-from-i-have-no-mouth/: evolution-log.json  guardrails.yml  personality-profile.json  soul.md
frontend/: package-lock.json
frontend/src/: app.css
frontend/src/lib/: api.ts  sse.ts  types.ts
frontend/src/lib/components/: NavBar.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
tests/: conftest.py  test_agents.py  test_chat_routes.py  test_config.py  test_config_routes.py  test_events.py  test_events_routes.py  test_integration.py  test_job_routes.py  test_leak_detector.py  test_models.py  test_orchestrator.py  test_output_writer.py  test_preparation.py  test_profile_routes.py  test_providers.py  test_queue.py  test_sanitizer.py  test_scoring_pipeline.py  test_search.py  test_style_metrics.py
(+4 files in other folders)
